--- a/001.html
+++ b/001.html
@@ -9,7 +9,7 @@
 
 </head>
 <body class="scroll" style="overflow-x: hidden;">
-<header> <h2> #001 16 Jan 2026- Hemsidan är uppe!</h2></header>
+<header> <h2 style="text-align: left;"> #001 16 Jan 2026- Hemsidan är uppe!</h2></header>
 
     <div class="border" style="min-width: 90vw;">
 Efter mycket om och men så är hemsidan äntligen uppe. jag har lärt mig mycket ......
