--- a/annat.html
+++ b/annat.html
@@ -8,28 +8,73 @@
     <script src="prefetch.js" defer></script>
      <link rel="icon" type="image/x-icon" href="medrep.svg">
 </head>
-<body>
+<body style="overflow: hidden;">
        <header>
-    <a href="index.html" class="hem"><h1>Ada Westerlund</h1></a>
+<a href="index.html"><h1 class="hem">Ada Westerlund</h1></a>
 
 
-        <nav>
-            <a href="blogg.html">Blogg</a>|
-            <a href="musik.html">Musik</a>|
-            <a href="artiklar.html">Trumhistoria</a>|
-            <a href="annat.html">Annat</a>|
-            <a href="kontakt.html">Kontakt</a>
-            
-        </nav>
+       <nav>
+            <div class="nav-link">   <a href="blogg.html">Blogg </a></div>
+            <div class="nav-link">    <a href="musik.html">Musik </a></div>
+            <div class="nav-link"><a href="artiklar.html">Texter </a></div>
+            <div class="nav-link">  <a href="annat.html">Annat </a></div>
+            <div class="nav-link">            <a href="kontakt.html">Kontakt </a></div>
+          </nav>
     </header>
 
 
 <main class="main">
+<div class="border"> 
+<h3>RESURSER</h3>
 
-<div class="border">
-recept?
-musiktips?
-böcker?
+<h3>BÖCKER</h3>
+<ul>
+<li>Toulson, Rob, <i>Drum Sound and Drum Tuning - Bridging science and creativity.</i>Routledge 2021.</li>
+<li>Rossing, Tomas D, <i>Science Of Percussion Instruments.</i>world Scientific Publishing Co Pte Ltd 2000.</li>
+<li>Lamb, John, <i>Anatomy Of Drumming - move better, feel better, play better.</i> createspace Independent Publishing Platform 2015.</li>
+<li><i>Well tempered drumkit</i></li>
+
+<li>Blades, James, <i>Percussion Instruments And Their History.</i>  1984</li>
+<li>Olsson, Sture, <i>Kroumata</i> 1985</li>
+</ul>
+
+<H3>LÄNKAR</H3><ul>
+<li><a href="https://legacy.wmich.edu/mus-theo/asym/3/" target="_blank">Asymetrisk metronom</a> perfekt för att analysera och öva på olika sväng</li>
+<li> <a href="http://general-theory-of-rhythm.org/" target="_blank">Malcom braffs texter om rytmik</a></li>
+<li><a href="http://malcolmbraff.ch/wtpa.html" target="_blank">Mikrorytmiskt program av Malcom braff</a></li>
+
+
+</ul>
+ 
+ 
+
+
+
+
+</div>
+<br>
+<div class="border scroll">
+<a href="trumset">mitt trumset</a>
+I grunden ett DW bop kit som har kapats på mitten. Trummorna kan förvaras i varran och i ett case. Med bara ett trumskinn är får de en tydligare ton och är betydligt lättare att stämma.
+En trumma 14" är ett ihopplock av en gammal pearl trumma med DW beslag. Jag har dekormålat den med drickateknik själv. DW lugsen är mer fingängade än de vanliga så de håller stämningen bättre 
+och är mer precisa.
+
+Cymbalerna är av volym själ de tunnaste jag kunnat få tag på. stativen är yamah lätta
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </div>
 
