--- a/kontakt.html
+++ b/kontakt.html
@@ -10,17 +10,16 @@
 </head>
 <body style="overflow: hidden;">
     <header>
-    <a href="index.html" class="hem"><h1>Ada Westerlund</h1></a>
+<a href="index.html"><h1 class="hem">Ada Westerlund</h1></a>
 
 
-        <nav>
-            <a href="blogg.html">Blogg</a>|
-            <a href="musik.html">Musik</a>|
-            <a href="artiklar.html">Trumhistoria</a>|
-            <a href="annat.html">Annat</a>|
-            <a href="kontakt.html">Kontakt</a>
-            
-        </nav>
+         <nav>
+            <div class="nav-link">   <a href="blogg.html">Blogg </a></div>
+            <div class="nav-link">    <a href="musik.html">Musik </a></div>
+            <div class="nav-link"><a href="artiklar.html">Texter </a></div>
+            <div class="nav-link">  <a href="annat.html">Annat </a></div>
+            <div class="nav-link">            <a href="kontakt.html">Kontakt </a></div>
+          </nav>
     </header>
 
 
@@ -29,12 +28,12 @@
 <h2>KONTAKT</h2>
 Du når mig lättast på mejl!
 
+<img src="Turtle-01.gif" alt="">
 
-
 <br>
 <br>
 <br>
-<a href="">INSTAGRAM</a>
+<a href="https://www.instagram.com/ada_westerlund/" target="_blank">INSTAGRAM</a>
 <br>
 
 <br>
@@ -51,7 +50,7 @@ Du når mig lättast på mejl!
 
 <div class="border padding">
 <h2>OM HEMSIDAN</h2>
-Sidan har jag gjort själv i HTML. Jag är trött på sociala medier och internet känns mer och mer som ett dött köpcentrum. här kan jag vara lite personlig! Det visar sig vara väldigt lätt att göra en hemsida. <br> <br>
+Sidan har jag gjort själv i HTML. Jag är var trött på sociala medier men ville ändå ha någonstans att dela med mig av min musik och tankar. Det visar sig vara väldigt lätt att göra en hemsida. <br> <br>
 
 
 
