--- a/trumhistoria.html
+++ b/trumhistoria.html
@@ -10,26 +10,26 @@
 </head>
 <body style="overflow: hidden;">
        <header>
-    <a href="index.html" class="hem"><h1>Ada Westerlund</h1></a>
+<a href="index.html"><h1 class="hem">Ada Westerlund</h1></a>
 
 
         <nav>
-            <a href="blogg.html">Blogg</a>|
-            <a href="musik.html">Musik</a>|
-            <a href="artiklar.html">Trumhistoria</a>|
-            <a href="annat.html">Annat</a>|
-            <a href="kontakt.html">Kontakt</a>
-            
-        </nav>
+            <div class="nav-link">   <a href="blogg.html">Blogg </a></div>
+            <div class="nav-link">    <a href="musik.html">Musik </a></div>
+            <div class="nav-link"><a href="artiklar.html">Texter </a></div>
+            <div class="nav-link">  <a href="annat.html">Annat </a></div>
+            <div class="nav-link">            <a href="kontakt.html">Kontakt </a></div>
+          </nav>
     </header>
 
 <nav class="sdr border padding">
 <h3>INNEHÅLL</h3>
 <hr>
 <ul>
-     <a class="dot" href="#Bakgrund">bakgrund</a>
-     <a class="dot" href="#militärtrumman">Militärtrumman</a>
-     <a class="dot" href="#bytrumman">Bytrumman</a>
+        <li>     <a class="dot" href="#Bakgrund">bakgrund</a></li>
+<li> <a class="dot" href="#militärtrumman">Militärtrumman</a></li>
+ <li>     <a class="dot" href="#bytrumman">Bytrumman</a></li>   
+
 
 
 
@@ -37,7 +37,9 @@
 
 
 </ul>
-
+ladda ned som textfil
+<a href="Trumhistoria.rtf" class="dot"><img src="book.gif" alt="">
+</a>
 
 
 </nav>
@@ -108,37 +110,23 @@ Vargtrumma
 
 <article>
 <h2 id="bytrumman">Bytrumman</h2>
-Under 1700-talet började armén ersätta sina trätrummor mot mässing. Många trätrummor levde då kvar uti byarna då mönsterbyordningen 1742 gav byåldermannen tillåtelse att bruka. Då i syfte sammankalla byn? citat:blah blah #7
-Trumman blev då bytrumma och var ett ljud och signalinstrument tillika hornet, luren och budkaveln #8. Bytrumman förekom över götaland och södra svelaand
-Bytrummans utrbedning sträckte sig över götaland och södra svealand #8 den var ej sällsynt på götalands östkust.
-Vanligast var den i sydöstra närke som sedan 1600-talet stått i centrum för sveriges produktion av militärtrummor. Däribland Boo, Svennevad, Sköllerstads sn. #7
+Under 1700-talet började armén ersätta sina trätrummor med trummor gjorda av mässing. Många trätrummor fick då nya hem uti byarna tack vare mönsterbyordningen som infördes år 1742. I mönsterbyordningen nämns ”Trumslag af en pinna” som ett möjligt redskap för sammankallnande av byn. #8 Detta gav byåldermannen tillåtelse att bruka trumman i syfte att sammankalla byn. citat:blah blah #7
+Trumman blev då en bytrumma och var ett signalinstrument tillika hornet, luren och budkaveln #8. Bytrummans utbredning sträckte sig över östra delen av götaland, från norra skåne upp till södra uppland, ända ut på götalands östkust och skärsgårdar #8  Vanligast var den i sydöstra Närke som sedan 1600-talet stått i centrum för Sveriges produktion av militärtrummor. Däribland Boo, Svennevad, Sköllerstads sn. #7
 
-TIllverkning av trummor i Närke började under 1600-talet. Det var bönder som tillverkade trummorna till armén. den första trumman tillverkades 1608 av Bengt Olsson i Flyinge. #7
-utifrån en inventering var trummorna i närke tillverkade i al, därefter asp, och björk som #7
-sejarsnörena var troligtvis tidigt hampsträngar men blev senare ersatta av järntrådar #8
-ett antal av bytrummor var ”förstämda” vilket innebar att sejarsnöret hade befattats med fågelpennor- ofta gåspennor eller vassrör #8.
-laggad enligt Ha Ba021102 björka kumla
+Tillverkningen av trummor i Närke började på 1600-talet. Det var bönderna som tillverkade trummor till armén. Den första trumman tillverkades 1608 av Bengt Olsson i Flyinge. #7 
+Utifrån en inventering var trummorna i Närke tillverkade i al, därefter asp, och björk som? #7 Sejarsnörena var i tidigare år troligtvis hampsträngar och blev senare ersatta av järntrådar #8
+Ett antal bytrummor var ”förstämda” vilket innebar att sejarsnöret hade befattats med fågelpennor – ofta gåspennor eller vassrör #8.
 
-När Sigurd Erixon besökte Närke 1916 beskrev han det som ”Trummornas Land”. Sigurd stötte på trummor och hörde om dem i ”snart sagt varje by” #8. Bytrummorna på Närkeslätten användes då för att organisera slåtter, vid valborg, kristi himmelsfärd, och vid bymöten. Under gemensam bymarsch förekom det även samspel med fiol och klarinett. #8
+När Sigurd Erixon besökte Närke 1916 beskrev han det som ”Trummornas Land”. Sigurd både stötte på trummor och hörde talas om dem i ”snart sagt varje by” #8. Bytrummorna på Närkeslätten användes för att organisera slåtter och vid  olika firanden som Valborg, Kristi himmelsfärd, och vid bymöten. Bytrummorna användes ofta då i gemensam bymarsch ibland i samspel med fiol och klarinett. #8
 
+Ute på Götalands östkust, på ön Väderskär, Loftahammars sn, Tjust skärgård, finns det en särskilt gammal bytrumma – Värstrumman #8 I Skärgården hade bytrumman en lite annan funktion i brist på kyrkklockor ”rördes” bytrumman varje lördagkväll efter kl 6 mellan 1 maj - 1 oktober. annars högitdsaftnar. Signalen markerade utearbetes slut. Bytrumman användes också för att hjälpa båtar att hitta hem i dimma och mörker.
 
-ute på götalands östkust
-
-på värskär där den särskilt gammal bytrumma äldsta DATERAD bytrumman är från värstrumman #8 i brist på kyrklocka sågs det som en plikt att ”röra” trumman. Varje lördag och högtidsafton annars böter. Bytrumman användes också för att hjälpa båtar hitta hem i dimma och eller mörker.
+Under 1800-talet började användningen av bytrummor dö ut, till stor del p.g.a. skiftesreformer och moderniseringen av jordbruket. #7 I Närke ljöd dock bytrumman ända in på 1920-talet. #8.
 
 
-Under 1800-talet började användingen av bytrummor dö ut, skiftesreformer och moderninseing av jordbruket. #7
-Trummorna i Närke ljöd ända in på 1920-talet. #8
+Brukandet av bytrumman var alltså inte först och främst i musikaliskt syfte och gissningsvis var byåldermannen inte musikaliskt skolad. Jag skulle gissa att bruket var relativt enkelt speltekniskt.
 
-
-Bruket av bytrumman var alltså först och främst inte musikaliskt i syfte och byåldermannen var kan man gissa inte musikaliskt skolad. Jag skulle gissa att bruket var relativt enkelt speltekniskt.
-
-
-
-
-
-
-
+1742 förslag till byordning, möjliga redskap för byns sammankallande ”blåsning utur en lur eller horn, ”trumslag af en pinna” och ”budkavles
 
 
 
@@ -217,6 +205,30 @@ Förbudet blev senare mer allmänt och övergripligt mot alla trummor i alla sam
 
 <article>
 <h3>Källor</h3>
+<ol>
+<li>Gustavsson Magnus, Därnest spela, Noterat 8</li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li>Erixon Sigurd,(1978) Byalag och byaliv. Kristianstads Boktryckeri AB</li>
+<li></li>
+<li></li>
+
+
+
+
+
+
+</ol>
+
+
+
+
+
+
 
 
 
