--- a/musik.html
+++ b/musik.html
@@ -10,17 +10,15 @@
 </head>
 <body>
        <header>
-    <a href="index.html" class="hem"><h1>Ada Westerlund</h1></a>
+<a href="index.html"><h1 class="hem">Ada Westerlund</h1></a>
 
-
-        <nav>
-            <a href="blogg.html">Blogg</a>|
-            <a href="musik.html">Musik</a>|
-            <a href="artiklar.html">Trumhistoria</a>|
-            <a href="annat.html">Annat</a>|
-            <a href="kontakt.html">Kontakt</a>
-            
-        </nav>
+   <nav>
+            <div class="nav-link">   <a href="blogg.html">Blogg </a></div>
+            <div class="nav-link">    <a href="musik.html">Musik </a></div>
+            <div class="nav-link"><a href="artiklar.html">Texter </a></div>
+            <div class="nav-link">  <a href="annat.html">Annat </a></div>
+            <div class="nav-link">            <a href="kontakt.html">Kontakt </a></div>
+          </nav>
     </header>
 
 <main class="main standard">
@@ -28,15 +26,16 @@
 <div class="border padding">
    <h2>JEMPA</h2>
     <div style="text-align: center;">
-  <img loading="lazy" class="img" src="dithered-stucki-1768127074162.png" alt="" style=" width: 200px; height: 200px; float: left;">
+  <img loading="lazy" class="img" src="bilder/JEMPA.jpeg" alt="" style=" width: 200px; height: 200px; float: left;">
 
 JEMPA spelar folkmusik fylld av energi. Med rytm och sväng i fokus lockar musiken till dans för såväl erfarna som nyfrälsta, och spelet är lekfullt och dynamiskt med inslag av improvisation. Bandet spelar till största delen sin egen musik, där varje medlems unika stil kommer till uttryck. Riviga polskor och medryckande valser varvas med sköra visor, och musikanterna väjer varken från sårbarhet eller humor. Musiken är fyllig, varm och sprudlande. Men trots den nyskapande andan är rötterna i den nordiska folkmusiken starka, och det bjuds alltid på några traditionella inslag. 
 
 Sedan JEMPA bildades våren 2024 har bandet varit landet runt och spelat. På Norrköpingsfestivalen gavs en mycket uppskattad konsert i Lilla Värmekyrkan, och i Göteborg blev det riv på dansgolvet när JEMPA spelade på Folk & Klubb. Hösten 2025 gjorde bandet sin första internationella spelning, på World Cultural Festival i Bangalore, Indien. EP:n Ett Litet Tag släpptes i november 2024 och visar på bandets breda uttryck, som knyts samman av det karaktäristiska soundet som bildas när de fyra musikerna förenas i tätt samspel och stor glädje för musiken. 
 
-JEMPA är pigga flöjtdrillar, klingande fiolsträngar, själfull sång, stilsäkert slagverk och harmonik som landar rätt i magen.
+JEMPA är pigga flöjtdrillar, klingande fiolsträngar, själfull sång, stilsäkert slagverk och harmonik som landar rätt i magen. <br> <br>
 
-<span>vi finns på  <a href="spotify.com">spotify</a> och <a href="instagram.com"> INSTAGRAM</a></span>
+<span>Vi finns på  <a href="spotify.com" target="_blank">spotify</a> och <a href="https://www.instagram.com/jempafolk/" target="_blank"> INSTAGRAM</a></span> <br>
+För bokningar eller info mejla: <a href="mailto:jempamusic@gmail.com">jempamusic@gmail.com</a>
 
 
 
@@ -45,20 +44,13 @@ JEMPA är pigga flöjtdrillar, klingande fiolsträngar, själfull sång, stilsä
 <div style="clear:both;"></div>   
 
 
-    </div>
-  
 
 
 
-
-   
 
 
 
 </div>
-
-
-
 
 
 
