added new titles

--- a/annat.html
+++ b/annat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>annat</title>
+    <title>ANNAT ROLIGT │ ADA WESTERLUND │ </title>
              <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="prefetch.js" defer></script>
      <link rel="icon" type="image/x-icon" href="medrep.svg">
@@ -25,7 +25,7 @@
 
 <main class="main">
 <div class="border"> 
-<h3>RESURSER</h3>
+<h3 style="display: inline; border: 2px solid deeppink; padding: 1px; border-radius: 10px;"><i>RESURSER</i></h3>
 
 <h3>BÖCKER</h3>
 <ul>
@@ -42,6 +42,7 @@
 <li><a href="https://legacy.wmich.edu/mus-theo/asym/3/" target="_blank">Asymetrisk metronom</a> perfekt för att analysera och öva på olika sväng</li>
 <li> <a href="http://general-theory-of-rhythm.org/" target="_blank">Malcom braffs texter om rytmik</a></li>
 <li><a href="http://malcolmbraff.ch/wtpa.html" target="_blank">Mikrorytmiskt program av Malcom braff</a></li>
+<li><a href="https://www.idrumtune.com/" target="_blank">Trumstämningsapp</a> av Rob Toulson</li>
 
 
 </ul>
@@ -54,8 +55,9 @@
 </div>
 <br>
 <div class="border scroll">
-<a href="trumset">mitt trumset</a>
-I grunden ett DW bop kit som har kapats på mitten. Trummorna kan förvaras i varran och i ett case. Med bara ett trumskinn är får de en tydligare ton och är betydligt lättare att stämma.
+       <h3>MITT TRUMSET</h3>
+I grunden ett DW bop kit som har kapats på mitten. Trummorna är då betydligt lättare och har då bara ett skinn vilket ger dem lägre ljudstyrka,tydligare tonhöjd, lättare att stämma och bäst av allt så
+går det att förvara dem i varandra för en smidig transport. 
 En trumma 14" är ett ihopplock av en gammal pearl trumma med DW beslag. Jag har dekormålat den med drickateknik själv. DW lugsen är mer fingängade än de vanliga så de håller stämningen bättre 
 och är mer precisa.
 
