--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title style="font-weight:bolder;">│ HEM │ Välkommen │ Ada Westerlund </title>
+    <title style="font-weight:bolder;"> │ HEM │ VÄLKOMMEN │ ADA WESTERLUND </title>
          <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="prefetch.js" defer></script>
      <link rel="icon" type="image/x-icon" href="icon.svg">
@@ -42,11 +42,11 @@ window.onload = function() {
     <div class="border">
  <div class="marquee marquee--hover-pause" style="font-weight: bold;">
     <ul class="marquee__content">
-VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN ///VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN ///
+VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN ///
     </ul>
 
     <ul aria-hidden="true" class="marquee__content">
-VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN ///VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN ///
+VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN ///
     </ul>
   </div>
 
