--- a/musik.html
+++ b/musik.html
@@ -34,8 +34,8 @@ Sedan JEMPA bildades våren 2024 har bandet varit landet runt och spelat. På No
 
 JEMPA är pigga flöjtdrillar, klingande fiolsträngar, själfull sång, stilsäkert slagverk och harmonik som landar rätt i magen. <br> <br>
 
-<span>Vi finns på  <a href="spotify.com" target="_blank">spotify</a> och <a href="https://www.instagram.com/jempafolk/" target="_blank"> INSTAGRAM</a></span> <br>
-För bokningar eller info mejla: <a href="mailto:jempamusic@gmail.com">jempamusic@gmail.com</a>
+<span style="display: inline; border: 2px solid deeppink; border-radius: 10px;">Vi finns på  <a href="spotify.com" target="_blank">spotify</a> och <a href="https://www.instagram.com/jempafolk/" target="_blank"> INSTAGRAM </a>För bokningar eller info mejla: <a href="mailto:jempamusic@gmail.com">jempamusic@gmail.com</a></span> 
+
 
 
 
