--- a/blogg.html
+++ b/blogg.html
@@ -13,14 +13,13 @@
 <a href="index.html"><h1 class="hem">Ada Westerlund</h1></a>
 
 
-        <nav>
-            <a href="blogg.html" class="nav-link">Blogg </a>
-            <a href="musik.html" class="nav-link">Musik </a>
-            <a href="artiklar.html" class="nav-link">Texter </a>
-            <a href="annat.html" class="nav-link">Annat </a>
-            <a href="kontakt.html" class="nav-link">Kontakt </a>
-            
-        </nav>
+      <nav>
+            <div class="nav-link">   <a href="blogg.html">Blogg </a></div>
+            <div class="nav-link">    <a href="musik.html">Musik </a></div>
+            <div class="nav-link"><a href="artiklar.html">Texter </a></div>
+            <div class="nav-link">  <a href="annat.html">Annat </a></div>
+            <div class="nav-link">            <a href="kontakt.html">Kontakt </a></div>
+          </nav>
     </header>
 
 
