--- a/annat.html
+++ b/annat.html
@@ -25,7 +25,7 @@
 
 <main class="main">
 <div class="border"> 
-<h3 style="display: inline; border: 2px solid deeppink; padding: 1px; border-radius: 10px;"><i>RESURSER</i></h3>
+<h2 style="text-align: center;">RESURSER</h2>
 
 <h3>BÖCKER</h3>
 <ul>
