--- a/kontakt.html
+++ b/kontakt.html
@@ -6,7 +6,7 @@
     <title>Kontakt</title>
              <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="prefetch.js" defer></script>
-     <link rel="icon" type="image/x-icon" href="medrep.svg">
+     <link rel="icon" type="image/x-icon" href="Turtle-01.gif">
 </head>
 <body style="overflow: hidden;">
     <header>
