--- a/trumhistoria.html
+++ b/trumhistoria.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artiklar</title>
+    <title>SVENSK TRUMHISTORIA ADA WESTERLUND</title>
              <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="prefetch.js" defer></script>
-     <link rel="icon" type="image/x-icon" href="medrep.svg">
+     <link rel="icon" type="image/x-icon" href="resurser/medrep.svg">
 </head>
 <body style="overflow: hidden;">
        <header>
