--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ window.onload = function() {
 </head>
 <body style="overflow: hidden;">
     <header>
-<a href="index.html"><h1 class="hem">Ada Westerlund</h1></a>
+<h1><a href="index.html" class="hem">Ada Westerlund</a></h1>
 
 
         <nav>
@@ -42,15 +42,15 @@ window.onload = function() {
     <div class="border">
  <div class="marquee marquee--hover-pause" style="font-weight: bold;">
     <ul class="marquee__content">
-VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN ///
+VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN ///
     </ul>
 
     <ul aria-hidden="true" class="marquee__content">
-VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN ///
+VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN ///
     </ul>
   </div>
 
-    <h2 style="color: rgb(234, 234, 234);"">Välkommen</h2>  
+    <h2>Välkommen</h2>  
     
       <div>
         
@@ -63,7 +63,7 @@ VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLK
 
 
     <div class="border padding" style="margin-top: 5px;">
-    <h2>AKTUELLT</h2>
+    <h2 class="center">AKTUELLT</h2>
     <ul>
 <li> <a class="dot" href="blogginlägg" style="font-weight: bolder;">datum.... hemsidan är uppe!</a></li>
 <li> JEMPA spelar på Källarbyn, Sthlm, 11 maj</li>
