--- a/trumhistoria.html
+++ b/trumhistoria.html
@@ -10,7 +10,7 @@
 </head>
 <body style="overflow: hidden;">
        <header>
-<a href="index.html"><h1 class="hem">Ada Westerlund</h1></a>
+<h1><a href="index.html" class="hem">Ada Westerlund</a></h1>
 
 
         <nav>
