--- a/artiklar.html
+++ b/artiklar.html
@@ -23,7 +23,8 @@ window.onload = function() {
 <body>
         <body style="overflow: hidden;">
     <header>
-<a href="index.html"><h1 class="hem">Ada Westerlund</h1></a>
+
+<h1><a href="index.html" class="hem">Ada Westerlund</a></h1>
 
    <nav>
             <div class="nav-link">   <a href="blogg.html">Blogg </a></div>
