--- a/musik.html
+++ b/musik.html
@@ -10,7 +10,7 @@
 </head>
 <body>
        <header>
-<a href="index.html"><h1 class="hem">Ada Westerlund</h1></a>
+<h1><a href="index.html" class="hem">Ada Westerlund</a></h1>
 
    <nav>
             <div class="nav-link">   <a href="blogg.html">Blogg </a></div>
