--- a/artiklar.html
+++ b/artiklar.html
@@ -27,7 +27,7 @@ window.onload = function() {
 <h1><a href="index.html" class="hem">Ada Westerlund</a></h1>
 
    <nav>
-            <div class="nav-link">   <a href="blogg.html">Blogg </a></div>
+            <div class="nav-link" style="text-underline-offset: 0.3em;">   <a href="blogg.html">Blogg </a></div>
             <div class="nav-link">    <a href="musik.html">Musik </a></div>
             <div class="nav-link"><a href="artiklar.html">Texter </a></div>
             <div class="nav-link">  <a href="annat.html">Annat </a></div>
