--- a/kontakt.html
+++ b/kontakt.html
@@ -14,7 +14,7 @@
 
 
          <nav>
-            <div class="nav-link">   <a href="blogg.html">Blogg </a></div>
+    <div class="nav-link" style="text-underline-offset: 0.3em;">   <a href="blogg.html">Blogg </a></div>
             <div class="nav-link">    <a href="musik.html">Musik </a></div>
             <div class="nav-link"><a href="artiklar.html">Texter </a></div>
             <div class="nav-link">  <a href="annat.html">Annat </a></div>
@@ -40,7 +40,7 @@ Du når mig lättast på mejl!
 <a href="tel:+46702050881">+46702050881</a>
 <br>
 <br>
-<a href="mailto:adawesterlund@proton.me">adawesterlund@proton.me</a>
+<a href="mailto:ada.westerlund@proton.me">ada.westerlund@proton.me</a>
 <br>
 <br>
 
@@ -50,7 +50,8 @@ Du når mig lättast på mejl!
 
 <div class="border padding">
 <h2>OM HEMSIDAN</h2>
-Sidan har jag gjort själv i HTML. Jag är var trött på sociala medier men ville ändå ha någonstans att dela med mig av min musik och tankar. Det visar sig vara väldigt lätt att göra en hemsida. <br> <br>
+Sidan har jag gjort själv i HTML. Jag är var trött på sociala medier men ville ändå ha någonstans att dela med mig av min musik och tankar.
+All design, iconer och muspekare har jag gjort själv. typsnittet är <a href="" target="_blank">sysfont</a>baserat på 'Chicago' som apple använde sig av under 90-talet.<br> <br>
 
 
 
