--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLKOMMEN /// VÄLK
       <div>
         
          <img src="bilder/live.jpeg" loading="lazy" style="width: 15vw; float:right;">Mitt namn är Ada Westerlund. Jag är slagverkare inom svensk folkmusik. Detta är min hemsida, här finns musik, nördiga texter och mer kommer!
-         <br><br><br><br><br> <i>Hemsidan är anpassad för dator!</i>
+         <br><br><br><br><br> <i>OBS Hemsidan är anpassad för dator!</i>
           <div style="clear:both;"></div>     
 
       </div>
